#70: How we work: – Changed font style and aligning for numbers. #69: Team page: – Added bg color for ava and position label. – Added floating rule for mobile devices. misc: – Replaced logo with high-definition one (better view on retina). – Fix font-size for catch section for different screen sizes.

--- a/_sass/_responsive.scss
+++ b/_sass/_responsive.scss
@@ -43,6 +43,19 @@ $below_large: "only screen and (max-width:"#{$large-screen}")";
   .author_wrap {
     min-width: 100%;
   }
+  .team_member {
+    &:before {
+      display: none;
+    }
+    .position {
+      position: relative;
+    }
+    .ava_wrap {
+      min-height: initial;
+      margin-right: 0;
+      padding-bottom: 0;
+    }
+  }
   .footer {
     .social_wrap {
       .social_icon {
